# rayreforge

./: CMakeLists.txt  main.cpp
data/: CornellBox-Empty-RG.mtl  room.mtl  simple.mtl  sponza.mtl  test.mtl  ufo_plane_free.mtl
include/: camera.hpp  color.hpp  ioutility.hpp  material.hpp  utility.hpp
include/struct/: aabb.hpp  bvh.hpp  hittable.hpp  hittable_list.hpp  perlin.hpp  rtw_stb_image.hpp  sphere.hpp  texture.hpp  triangle.hpp  vec3.hpp
